# vector-search-azure-cosmos-db-postgresql

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data_processing/: README.md  data_preprocessing.ipynb  generate_embeddings.py
data_upload/: README.md  upload_data_to_postgresql.py  upload_data_to_postgresql_hnsw.py  upload_data_to_postgresql_ivfflat.py  upload_images_to_blob.py
vector_search_samples/: README.md  constants.py  utils.py
